--- a/resources/assets/sass/profile/profile.scss
+++ b/resources/assets/sass/profile/profile.scss
@@ -182,7 +182,7 @@
   @import "./general";
   @import "./perfil";
 
-  > .profile-content {
+  .profile-content {
     background-color: #FFF;
     border-right: 2px solid $color-blue;
     float: right;
