--- a/resources/assets/sass/profile/_form.scss
+++ b/resources/assets/sass/profile/_form.scss
@@ -57,6 +57,7 @@ form {
     font-size: 13px;
     font-weight: bold;
     height: 25px;
+    line-height: 25px;
     padding: 0 15px;
     &:hover {
       background-color: $color-green-hover;
