--- a/resources/assets/sass/profile/_perfil.scss
+++ b/resources/assets/sass/profile/_perfil.scss
@@ -234,6 +234,7 @@
       color: $color-text-box;
       line-height: $line-height;
     }
+    input[type=text],
     input[type=number] {
       color: $color-text-box;
       margin-left: 0;
