ref #94: First version of Drag n Drop.

--- a/resources/assets/sass/global/_variables.scss
+++ b/resources/assets/sass/global/_variables.scss
@@ -17,6 +17,7 @@ $color-green: #71aa30;
 $color-green-hover: lighten($color-green, 10%);
 
 $color-text-box: #999999;
+$color-text-box-hover: lighten($color-text-box, 10%);
 
 $cor-verde-submit: #71aa30;
 $border-radius: 6px;
