--- a/public/assets/portal/css/profile.css
+++ b/public/assets/portal/css/profile.css
@@ -407,7 +407,34 @@
     width: 75%;
     min-height: 600px;
     font-size: 12px;
-    color: #999999; }
+    color: #999999;
+    /*
+.box__dragndrop,
+.box__uploading,
+.box__success,
+.box__error {
+  display: none;
+}
+
+.box {
+  width: 100%;
+  margin: 20px 0;
+  border: 2px dashed $color-text-box;
+  border-radius: 6px;
+  padding: 20px 5px;
+}
+.box.has-advanced-upload {
+  background-color: white;
+  outline: 2px dashed black;
+  outline-offset: -10px;
+}
+.box.has-advanced-upload .box__dragndrop {
+  display: inline;
+}
+.box.is-dragover {
+  background-color: grey;
+}
+*/ }
     .profile .profile-content form label {
       font-weight: normal;
       font-size: 13px;
@@ -519,6 +546,112 @@
         text-align: left; }
       .profile .profile-content .bank table.mini td {
         color: #999999; }
+    .profile .profile-content .box {
+      margin-top: 20px;
+      font-size: 1.25rem;
+      /* 20 */
+      background-color: #ffffff;
+      position: relative;
+      padding: 40px 5px; }
+      .profile .profile-content .box.has-advanced-upload {
+        border: 2px dashed #999999;
+        border-radius: 6px;
+        -webkit-transition: outline-offset .15s ease-in-out, background-color .15s linear;
+        transition: outline-offset .15s ease-in-out, background-color .15s linear; }
+      .profile .profile-content .box.is-dragover {
+        border-color: #999999;
+        background-color: #cccccc; }
+    .profile .profile-content .box__dragndrop,
+    .profile .profile-content .box__icon {
+      display: none; }
+    .profile .profile-content .box.has-advanced-upload .box__dragndrop {
+      display: inline; }
+    .profile .profile-content .box.has-advanced-upload .box__icon {
+      width: 100%;
+      height: 40px;
+      fill: #999999;
+      display: block;
+      margin-bottom: 20px; }
+    .profile .profile-content .box.is-uploading .box__input, .profile .profile-content .box.is-success .box__input, .profile .profile-content .box.is-error .box__input {
+      visibility: hidden; }
+    .profile .profile-content .box__uploading, .profile .profile-content .box__success, .profile .profile-content .box__error {
+      display: none; }
+    .profile .profile-content .box.is-uploading .box__uploading, .profile .profile-content .box.is-success .box__success, .profile .profile-content .box.is-error .box__error {
+      display: block;
+      position: absolute;
+      top: 50%;
+      right: 0;
+      left: 0;
+      -webkit-transform: translateY(-50%);
+      transform: translateY(-50%); }
+    .profile .profile-content .box__uploading {
+      text-align: center;
+      font-style: italic; }
+    .profile .profile-content .box__success {
+      text-align: center;
+      -webkit-animation: appear-from-inside .25s ease-in-out;
+      animation: appear-from-inside .25s ease-in-out; }
+
+@-webkit-keyframes appear-from-inside {
+  from {
+    -webkit-transform: translateY(-50%) scale(0); }
+  75% {
+    -webkit-transform: translateY(-50%) scale(1.1); }
+  to {
+    -webkit-transform: translateY(-50%) scale(1); } }
+
+@keyframes appear-from-inside {
+  from {
+    -webkit-transform: translateY(-50%) scale(0);
+    transform: translateY(-50%) scale(0); }
+  75% {
+    -webkit-transform: translateY(-50%) scale(1.1);
+    transform: translateY(-50%) scale(1.1); }
+  to {
+    -webkit-transform: translateY(-50%) scale(1);
+    transform: translateY(-50%) scale(1); } }
+    .profile .profile-content .box__restart {
+      font-weight: 700; }
+      .profile .profile-content .box__restart:focus, .profile .profile-content .box__restart:hover {
+        color: #b3b3b3; }
+    .profile .profile-content .box__file {
+      width: 0.1px;
+      height: 0.1px;
+      opacity: 0;
+      overflow: hidden;
+      position: absolute;
+      z-index: -1; }
+      .profile .profile-content .box__file + label {
+        color: #999999;
+        width: 100%;
+        text-align: center;
+        text-overflow: ellipsis;
+        white-space: nowrap;
+        cursor: pointer;
+        display: inline-block;
+        overflow: hidden;
+        font-size: 18px; }
+        .profile .profile-content .box__file + label .box__dragndrop {
+          font-size: 12px; }
+        .profile .profile-content .box__file + label:hover strong {
+          color: #b3b3b3; }
+      .profile .profile-content .box__file:focus + label strong, .profile .profile-content .box__file.has-focus + label strong {
+        color: #b3b3b3; }
+      .profile .profile-content .box__file:focus + label, .profile .profile-content .box__file.has-focus + label {
+        outline: 1px dotted #000;
+        outline: -webkit-focus-ring-color auto 5px; }
+      .profile .profile-content .box__file + label * {
+        /* pointer-events: none; */
+        /* in case of FastClick lib use */ }
+    .profile .profile-content .box__button {
+      font-weight: 700;
+      color: #e5edf1;
+      background-color: #b3b3b3;
+      display: none;
+      padding: 8px 16px;
+      margin: 40px auto 0; }
+      .profile .profile-content .box__button:hover, .profile .profile-content .box__button:focus {
+        background-color: #0f3c4b; }
     .profile .profile-content .center {
       float: left;
       margin-top: 22px;
