--- a/resources/assets/sass/profile/_form.scss
+++ b/resources/assets/sass/profile/_form.scss
@@ -38,7 +38,9 @@ form {
 
     i {
       position: absolute;
-      top: 5px;
+      top: 7px;
+      z-index: 2;
+      right: -14px;
     }
 
     textarea.form-control {
