--- a/public/assets/portal/css/sports.css
+++ b/public/assets/portal/css/sports.css
@@ -16,6 +16,23 @@
 .font-text, .info .links, .info .content, .info .content h2, .info .content h3, .info .content h4, .info .content p, .sportsMenu .region, .sportsMenu .fixture, .markets table.singleRow2Cols, .markets table.singleRow3Cols, .markets table.multiRow2Cols, .markets table.multiRow3Cols, .markets table.multiRow3ColsUnlabeled, .menuLive .region, .menuLive table, .sportsMenu-interval .content {
   font-family: "Open Sans", "Droid Sans", sans-serif; }
 
+/* Personalise Popup */
+.sweet-alert.caspt {
+  font-family: "Open Sans", "Droid Sans", sans-serif; }
+  .sweet-alert.caspt .sa-icon {
+    position: absolute;
+    top: calc(50% - 40px);
+    margin: 0; }
+  .sweet-alert.caspt h2, .sweet-alert.caspt p, .sweet-alert.caspt fieldset {
+    margin: 0 0 0 100px; }
+  .sweet-alert.caspt .sa-error-container, .sweet-alert.caspt .sa-button-container {
+    text-align: right;
+    margin: 0 0 0 100px; }
+  .sweet-alert.caspt button.confirm {
+    background-color: #71aa30 !important; }
+    .sweet-alert.caspt button.confirm:hover {
+      background-color: #71aa30 !important; }
+
 .popup-alert .modal-dialog {
   width: 440px;
   margin: 10px auto;
