--- a/public/assets/portal/css/profile.css
+++ b/public/assets/portal/css/profile.css
@@ -469,11 +469,13 @@
         text-indent: 0; }
     .profile .profile-content form .input-group {
       width: 100%; }
-      .profile .profile-content form .input-group i {
+      .profile .profile-content form .input-group i.fa {
+        font-size: 16px;
+        opacity: 0.4;
         position: absolute;
-        top: 7px;
-        z-index: 2;
-        right: -14px; }
+        top: 4px;
+        z-index: 3;
+        right: 4px; }
       .profile .profile-content form .input-group textarea.form-control {
         height: 100px;
         border-radius: 6px; }
@@ -500,7 +502,7 @@
       -moz-appearance: none !important;
       background: url("/assets/portal/img/combodown.gif") no-repeat right #fff !important; }
     .profile .profile-content form .warning-color {
-      font-size: 12px; }
+      font-size: 10px; }
     .profile .profile-content form .upload img {
       width: 100%;
       height: auto; }
