--- a/resources/assets/sass/profile/_form.scss
+++ b/resources/assets/sass/profile/_form.scss
@@ -45,6 +45,10 @@ form {
       right: 4px;
     }
 
+    select + i.fa {
+      right: 18px;
+    }
+
     textarea.form-control {
       height: 100px;
       border-radius: 6px;
