--- a/public/assets/portal/css/register.css
+++ b/public/assets/portal/css/register.css
@@ -151,13 +151,16 @@
               min-width: 50px;
               background-color: #FFF;
               width: 100%; }
+            .register > .content > .row > .column > .row .field span {
+              line-height: initial;
+              float: left; }
     .register > .content .bs-wp {
       padding: 0 16px; }
       .register > .content .bs-wp .col-xs-3,
       .register > .content .bs-wp .col-xs-4,
       .register > .content .bs-wp .col-xs-5,
       .register > .content .bs-wp .col-xs-6 {
-        padding: 0 5px; }
+        padding: 0 7px; }
       .register > .content .bs-wp label {
         font-family: 'Open Sans', 'Droid Sans', Verdana, sans-serif;
         font-size: 11px;
@@ -169,6 +172,9 @@
         border-radius: 6px;
         height: 21px;
         font-size: 12px; }
+      .register > .content .bs-wp input + i.fa {
+        float: right;
+        margin-right: 6px; }
       .register > .content .bs-wp .agreement {
         font-family: 'Open Sans', 'Droid Sans', Verdana, sans-serif;
         font-size: 12px;
@@ -184,7 +190,7 @@
           margin-left: 5px; }
   .register .fa-exclamation-circle,
   .register .fa-check-circle {
-    font-size: 1.4em;
+    font-size: 16px;
     margin-left: -20px;
     margin-top: 2px; }
   .register .warning-color {
