--- a/resources/assets/sass/profile/_general.scss
+++ b/resources/assets/sass/profile/_general.scss
@@ -110,9 +110,14 @@
 }
 
 .slim-row {
-  margin-left: -5px;
-  margin-right: -5px;
-  .col-xs-* {
-    padding: 0 5px;
+  margin-left: -8px;
+  margin-right: -8px;
+  > .col-xs-1, > .col-xs-2, > .col-xs-3, > .col-xs-4, > .col-xs-5, > .col-xs-6, > .col-xs-7, > .col-xs-8, > .col-xs-9, > .col-xs-10, > .col-xs-11, > .col-xs-12 {
+    padding: 0 8px;
+  }
+}
+.no-padding {
+  > .col-xs-1, > .col-xs-2, > .col-xs-3, > .col-xs-4, > .col-xs-5, > .col-xs-6, > .col-xs-7, > .col-xs-8, > .col-xs-9, > .col-xs-10, > .col-xs-11, > .col-xs-12 {
+    padding: 0;
   }
 }
